# CMakeProject2

./: .gitignore  README.md  build.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/SomeLibrary/: CMakeLists.txt
