sourcelist(EXECUTABLES ${CMAKE_CURRENT_SOURCE_DIR})
foreach(EXECUTABLE ${EXECUTABLES})
    get_filename_component(EXECUTABLE_MAIN_NAME ${EXECUTABLE} NAME_WLE)
    set(EXECUTABLE_NAME "${EXECUTABLE_MAIN_NAME}${EXECUTABLE_SUFFIX}")
    message("Adding executable: ${EXECUTABLE_NAME}")
    add_executable("${EXECUTABLE_NAME}" ${EXECUTABLE})
    get_property(LIBRARIES GLOBAL PROPERTY LIBRARY_LIST)
    foreach(LIBRARY ${LIBRARIES})
        message("Linking library: ${LIBRARY}")
    endforeach()
    target_link_libraries(${EXECUTABLE_NAME} PRIVATE ${LIBRARIES})
endforeach()